--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 							<li>
 								<a href="#" class="icon fa-angle-down">Projects</a>
 								<ul>
+									<li><a href="Mapmory.html">Mapmory</a></li>
+									<li><a href="Handl.html">Handl</a></li>
 									<li><a href="ARNavigation.html">AR Navigation</a></li>
 									<li><a href="WhoMatters.html">Who Matters</a></li>
 									<li><a href="VUI.html">Charles Bot</a></li>
@@ -43,7 +45,7 @@
 					<p>Welcome to my universe</p>
 					<ul class="actions special">
 						<li><a href="#Portfolio" class="button primary">Portfolio</a></li>
-						<li><a href="files/resume.pdf" class="button primary" download="resume.pdf">Download CV</a></li>
+						<li><a href="files/resume.pdf" class="button primary" download="resume.pdf">View Resume</a></li>
 						<li><a href="#main" class="button">About Me</a></li>
 					</ul>
 				</section>
@@ -54,15 +56,13 @@
 					<section class="box special">
 						<header class="major">
 							<h2>Building a world that brings us closer <br>to each other, and to ourselves.</h2>
-							<p> Frontend / Full Stack Software Engineer | User Experience Engineer </p>
-							<p><img class="image left round3" src="images/profile2.png" alt=""/> Though old saying "Technology Humanity", do the technologies nowadays bring more humanity to us? AI and ML allow computers to reach further, but how could we really use these breakthroughs to enrich people? I place myself in the gap between technology and humanity, my mission is <font color="#e89980">to augment human with the technology, as well as with the deep concern of humanity.</font>
+							<p> Frontend / Backend / Full Stack Software Developer </p>
+							<p><img class="image left round3" src="images/profile2.png" alt=""/> Though old saying "Technology Humanity", do the technologies nowadays bring more humanity to us? I place myself in the gap between technology and humanity, my mission is <font color="#e89980">to augment human with the technology, as well as with the deep concern of humanity.</font>
 							</p>
 							<ul class="icons">
 								<li><a style="font-size: 2em;" class="icon">Contact me @</a></li>
 								<li><a href="https://www.linkedin.com/in/yu-lin-chung/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://github.com/thatcharles" class="icon fa-github"><span class="label">Github</span></a></li>
-								<!--li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li-->
-								<!--li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li-->
 								<li><a href="mailto: that_charles@gapp.nthu.edu.tw" class="icon fa-envelope "><span class="label">Gmail</span></a></li>
 							</ul>
 							
@@ -86,9 +86,22 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
+								<span class="image featured"><img height="250" src="images/HandlCover.png" alt="" /></span>
+								<h3>Handl : Share You Quicker</h3>
+								<p><b>Project Background : </b>Team Project<br><b>Project date : </b>2019.08 - 2019.11<br><b>1st Prize winner of GeorgiaTech CIC mobile apps competition</b><br>Handl is your personal social media hub that deducts contact exchanging time by 50% of existing solutions.<br></p>
+								<ul class="actions special">
+									<li><a href="Handl.html" class="button alt">Learn More</a></li>
+								</ul>
+							</section>
+
+						</div>
+
+						<div class="col-6 col-12-narrower">
+
+							<section class="box special">
 								<span class="image featured"><img height="250" src="images/ARNavigationFront.png" alt="" /></span>
 								<h3>AR Pedestrian Navigation</h3>
-								<p><b>Project Background : </b>Research Project<br><b>Project date : </b>2018.09 - present<br><b>Project supervisor : </b>Dr. Yung-Ju Chang and Dr. Hung-Kuo Chu<br>In the observation of the most widely used digital mapping navigation system -- Google map, we found users...<br></p>
+								<p><b>Project Background : </b>Research Project<br><b>Project date : </b>2018.09 - 2019.02<br><b>Project supervisor : </b>Dr. Yung-Ju Chang and Dr. Hung-Kuo Chu<br>In the observation of the most widely used digital mapping navigation system -- Google map, we found users...<br></p>
 								<ul class="actions special">
 									<li><a href="ARNavigation.html" class="button alt">Learn More</a></li>
 								</ul>
